--- a/style.css
+++ b/style.css
@@ -6,31 +6,42 @@
 body {
     height: 100vh;
     width: 100vw;
-    background: rgba(0, 0, 0);
+    background: rgba(0, 0, 0, 0.347);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.modal {
+    width: 320px;
+    height: 150px;
+    display: none;
+}
+.show {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 90;
+    background: rgb(216, 198, 255);
+    padding: 4rem;
+    border-radius: 6px;
+}
+
+.close_model {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    padding: 8px;
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    background: red;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.clock {
-    height: 90px;
-    width: 200px;
-    background: rgba(180, 179, 179, 0.792);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 2rem;
-    border-radius: 1rem;
-}
-
-.factorialValue {
-    height: 80px;
-    width: 100px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 2rem;
-    border-radius: 1rem;
-    background: whitesmoke;
-    
-
+    cursor: pointer;
 }
